--- a/views/admin-invoices.ejs
+++ b/views/admin-invoices.ejs
@@ -24,7 +24,7 @@
               class="col-12 p-4"
               style="background-color: rgb(255, 237, 136)"
             >
-              <h3>Today invoices</h3>
+              <h3>Invoices List</h3>
               <table
                 class="table table-sm table-striped table-bordered border-primary"
               >
