complete buy products feature

--- a/views/admin-add-staff.ejs
+++ b/views/admin-add-staff.ejs
@@ -34,6 +34,35 @@
               <h2>Add employee</h2>
               <div class="row g-3">
                 <div class="col-12">
+                  <label for="email" class="form-label">Email</label>
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    class="form-control"
+                  />
+                </div>
+                <div class="col-12">
+                  <label for="password" class="form-label">Password</label>
+                  <input
+                    type="password"
+                    name="password"
+                    id="password"
+                    class="form-control"
+                  />
+                </div>
+                <div class="col-12">
+                  <label for="cfmpassword" class="form-label"
+                    >Confirm Password</label
+                  >
+                  <input
+                    type="password"
+                    name="cfmpassword"
+                    id="cfmpassword"
+                    class="form-control"
+                  />
+                </div>
+                <div class="col-12">
                   <label for="name" class="form-label">Name</label>
                   <input
                     type="text"
