--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,9 @@
     <div class="content" data-aos="fade-up">
       <h3>Most Tasty Burger For You</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo eius inventore
-        reprehenderit alias eos facilis, ipsa est asperiores repellendus!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+        explicabo eius inventore reprehenderit alias eos facilis, ipsa est
+        asperiores repellendus!
       </p>
       <a href="#" class="btn btn-block btn-warning btn-lg text-white"
         ><h2 class="text-white">Explore now</h2></a
@@ -23,7 +24,9 @@
   <!-- foods section starts  -->
   <section class="packages" id="foods">
     <a href="/foods" title="Click fore more foods"
-      ><h1 class="heading">Our <span>Foods</span></h1></a
+      ><h1 class="heading text-warning font-weight-bold">
+        Our <span>Foods</span>
+      </h1></a
     >
     <div class="box-container">
       <div class="row">
@@ -38,7 +41,9 @@
               <div class="content">
                 <div class="price"><%= food.price %></div>
                 <p><%= food.description %></p>
-                <a href="/must-login" class="btn btn-block btn-warning btn-lg text-white"
+                <a
+                  href="/must-login"
+                  class="btn btn-block btn-warning btn-lg text-white"
                   ><h4>Order now</h4></a
                 >
               </div>
@@ -54,7 +59,9 @@
   <!-- drinks section starts  -->
   <section class="packages" id="drinks">
     <a href="/drinks" title="Click fore more drinks"
-      ><h1 class="heading">Our <span>Drinks</span></h1></a
+      ><h1 class="heading text-warning font-weight-bold">
+        Our <span>Drinks</span>
+      </h1></a
     >
     <div class="box-container">
       <div class="row">
