--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         explicabo eius inventore reprehenderit alias eos facilis, ipsa est
         asperiores repellendus!
       </p>
-      <a href="#" class="btn btn-block btn-warning btn-lg text-white"
+      <a href="/must-login" class="btn btn-block btn-warning btn-lg text-white"
         ><h2 class="text-white">Explore now</h2></a
       >
     </div>
