--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -8,23 +8,44 @@
             <div class="row">
               <% if (infoLoginObj != '') { %>
               <div class="col-12 alert alert-success alert-dismissible">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <a
+                  href="#"
+                  class="close"
+                  data-dismiss="alert"
+                  aria-label="close"
+                  >&times;</a
+                >
                 <h3><%= infoLoginObj %></h3>
               </div>
               <% } %> <% if (infoObj != '') { %>
               <div class="col-12 alert alert-success alert-dismissible">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <a
+                  href="#"
+                  class="close"
+                  data-dismiss="alert"
+                  aria-label="close"
+                  >&times;</a
+                >
                 <h3><%= infoObj %></h3>
               </div>
               <% } %> <% if (infoErrorsObj != '') { %>
               <div class="col-12 alert alert-danger alert-dismissible">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <a
+                  href="#"
+                  class="close"
+                  data-dismiss="alert"
+                  aria-label="close"
+                  >&times;</a
+                >
                 <h3><%= infoErrorsObj %></h3>
               </div>
               <% } %>
             </div>
             <div class="row rounded">
-              <div class="col-5 p-4" style="background-color: rgb(255, 237, 136)">
+              <div
+                class="col-md-5 p-4"
+                style="background-color: rgb(255, 237, 136)"
+              >
                 <div class="row justify-content-center text-center">
                   <div class="col-12">
                     <H2 class="text-warning">Name: <%= data.name%></H2>
@@ -42,31 +63,42 @@
                 <!-- Dưới cái dòng này chỗ này -->
 
                 <div class="row">
-                  <div class="col-8 text-center">
-                    <a class="btn btn-danger" href="/client"><h3>Go Shopping Now !!!</h3></a>
+                  <div class="col-md-8 text-center">
+                    <a class="btn btn-danger" href="/client"
+                      ><h3>Go Shopping Now !!!</h3></a
+                    >
                   </div>
-                  <div class="col-4 text-left">
-                    <a class="btn btn-primary" href="/login"><h3>Log Out</h3></a>
+                  <div class="col-md-4 text-center">
+                    <a class="btn btn-primary" href="/login"
+                      ><h3>Log Out</h3></a
+                    >
                   </div>
                 </div>
               </div>
-              <div class="col-7 p-4" style="background-color: rgb(255, 237, 136)">
+              <div
+                class="col-md-7 p-4"
+                style="background-color: rgb(255, 237, 136)"
+              >
                 <h3>History invoice</h3>
-                <table class="table table-striped table-bordered border-primary">
+                <table
+                  class="table table-striped table-bordered border-primary"
+                >
                   <tr>
                     <th style="width: 10%"><h4>STT</h4></th>
                     <th style="width: 50%"><h4>Invocie ID</h4></th>
                     <th style="width: 30%"><h4>Total</h4></th>
                     <th style="width: 10%"><h4>For more</h4></th>
                   </tr>
-                  <%if(invoices != null){ for(let i in invoices ){ %> <% if(invoices[i].status ==
-                  4){ %>
+                  <%if(invoices != null){ for(let i in invoices ){ %> <%
+                  if(invoices[i].status == 4){ %>
                   <tr class="text-success">
                     <td><h4><%= parseInt(i) + 1 %></h4></td>
                     <td><h4><%= invoices[i]._id %></h4></td>
                     <td><h4><%= invoices[i].value %></h4></td>
                     <td>
-                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                      <h4>
+                        <a href="/invoice/<%= invoices[i]._id %>">view</a>
+                      </h4>
                     </td>
                   </tr>
                   <% } else if (invoices[i].status == 3){ %>
@@ -75,7 +107,9 @@
                     <td><h4><%= invoices[i]._id %></h4></td>
                     <td><h4><%= invoices[i].value %></h4></td>
                     <td>
-                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                      <h4>
+                        <a href="/invoice/<%= invoices[i]._id %>">view</a>
+                      </h4>
                     </td>
                   </tr>
                   <% } else if (invoices[i].status == 2){ %>
@@ -84,7 +118,9 @@
                     <td><h4><%= invoices[i]._id %></h4></td>
                     <td><h4><%= invoices[i].value %></h4></td>
                     <td>
-                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                      <h4>
+                        <a href="/invoice/<%= invoices[i]._id %>">view</a>
+                      </h4>
                     </td>
                   </tr>
                   <% } else if (invoices[i].status == 1){ %>
@@ -93,7 +129,9 @@
                     <td><h4><%= invoices[i]._id %></h4></td>
                     <td><h4><%= invoices[i].value %></h4></td>
                     <td>
-                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                      <h4>
+                        <a href="/invoice/<%= invoices[i]._id %>">view</a>
+                      </h4>
                     </td>
                   </tr>
                   <% } else { %>
