--- a/views/client-view-invoice.ejs
+++ b/views/client-view-invoice.ejs
@@ -13,13 +13,24 @@
 
   <div class="container-fluid justify-content-center d-flex">
     <div class="col-7 p-4">
-      <div class="card mt-2" style="background-color: rgb(248, 246, 218); border-radius: 10px">
+      <div
+        class="card mt-2"
+        style="background-color: rgb(248, 246, 218); border-radius: 10px"
+      >
         <div class="card-body">
           <div class="row">
-            <div class="col-md-6 text-center"><h3>Name: <%= client.name%></h3></div>
-            <div class="col-md-6 text-center"><h3>Address: <%= invoice.deliveryAddress %></h3></div>
-            <div class="col-md-6 text-center"><h3>Phone: <%= invoice.phoneNumber %></h3></div>
-            <div class="col-md-6 text-center"><h3>Total: <%= invoice.value %></h3></div>
+            <div class="col-md-6 text-center">
+              <h3>Name: <%= client.name%></h3>
+            </div>
+            <div class="col-md-6 text-center">
+              <h3>Total: <%= invoice.value %></h3>
+            </div>
+            <div class="col-md-12 text-center">
+              <h3>Address: <%= invoice.deliveryAddress %></h3>
+            </div>
+            <div class="col-md-12 text-center">
+              <h3>Phone: <%= invoice.phoneNumber %></h3>
+            </div>
           </div>
           <div class="row rounded mt-4">
             <table class="table table-striped table-bordered border-primary">
@@ -57,13 +68,19 @@
           <a
             class="btn btn-warning text-white"
             href="/client"
-            style="border-radius: 20px; box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2)"
+            style="
+              border-radius: 20px;
+              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+            "
             ><h5>Go Shopping now ??</h5></a
           >
         </div>
         <div class="col-4 text-center">
           <a
-            style="border-radius: 20px; box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2)"
+            style="
+              border-radius: 20px;
+              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+            "
             class="btn btn-danger"
             href="/cancel/<%= invoice._id %>"
             ><h5>Cancel the order : (</h5></a
@@ -76,7 +93,10 @@
           <a
             class="btn btn-warning text-white"
             href="/client"
-            style="border-radius: 20px; box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2)"
+            style="
+              border-radius: 20px;
+              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+            "
             ><h5>Go Shopping now ??</h5></a
           >
         </div>
