--- a/views/client-invoice.ejs
+++ b/views/client-invoice.ejs
@@ -14,19 +14,33 @@
   <div class="container-fluid">
     <% if (infoObj != '') { %>
     <div class="col-12 alert alert-success alert-dismissible">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <a href="#" class="close" data-dismiss="alert" aria-label="close"
+        >&times;</a
+      >
       <h3><%= infoObj %></h3>
     </div>
     <% } %> <% if (infoErrorsObj != '') { %>
     <div class="col-12 alert alert-danger alert-dismissible">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <a href="#" class="close" data-dismiss="alert" aria-label="close"
+        >&times;</a
+      >
       <h3><%= infoErrorsObj %></h3>
     </div>
     <% } %>
     <form action="/create-invoice" method="POST">
       <div class="row">
-        <input type="hidden" name="createTime" id="createTime" value="<%- new Date()%>" />
-        <input type="hidden" name="cart_id" id="cart_id" value="<%= cart._id %>" />
+        <input
+          type="hidden"
+          name="createTime"
+          id="createTime"
+          value="<%- new Date()%>"
+        />
+        <input
+          type="hidden"
+          name="cart_id"
+          id="cart_id"
+          value="<%= cart._id %>"
+        />
         <input type="hidden" name="value" id="value" value="<%= total %>" />
       </div>
       <div class="row justify-content-center">
@@ -40,28 +54,36 @@
         >
           <div class="row p-4 m-4">
             <div class="col-md-12 h1 justify-content-center">
-              <label for="client">Client name: </label>
+              <label for="client">Client name: <%= client.name %></label>
               <input
                 class="text-center"
-                type="text"
+                type="hidden"
                 name="client"
                 id="client"
                 disabled
                 value="<%= client.name %>"
               />
             </div>
-            <div class="col-md-6 h1">
+            <div class="col-md-12 h1">
               <label for="address">Address: </label>
-              <input type="text" name="address" id="address" value="<%= client.address %>" />
+              <input
+                type="text"
+                name="address"
+                id="address"
+                value="<%= client.address %>"
+              />
             </div>
-            <div class="col-md-6 h1">
+            <div class="col-md-12 h1">
               <label for="tel">Phone number: </label>
               <input type="tel" name="tel" id="tel" value="<%= client.tel %>" />
             </div>
           </div>
         </div>
         <div class="col-7 p-4">
-          <div class="card mt-4" style="background-color: rgb(248, 246, 218); border-radius: 10px">
+          <div
+            class="card mt-4"
+            style="background-color: rgb(248, 246, 218); border-radius: 10px"
+          >
             <table class="table table-striped table-bordered border-primary">
               <tr>
                 <th style="width: 10%"><h2>STT</h2></th>
@@ -69,7 +91,8 @@
                 <th style="width: 30%"><h2>Price</h2></th>
                 <th style="width: 20%"><h2>Quantity</h2></th>
               </tr>
-              <% if (productList != '') { %> <% productList.forEach(function(product, index){ %>
+              <% if (productList != '') { %> <%
+              productList.forEach(function(product, index){ %>
               <tr>
                 <td><h3><%= index + 1%></h3></td>
                 <td><h3><%= product.name %></h3></td>
@@ -82,12 +105,32 @@
             </table>
           </div>
         </div>
+        <div class="col-7 p-4">
+          <div
+            class="card mt-4"
+            style="background-color: rgb(248, 246, 218); border-radius: 10px"
+          >
+            <textarea
+              name="note"
+              id="note"
+              class="form-control"
+              cols="30"
+              rows="4"
+              type="text"
+              placeholder="Ghi chú:"
+              style="font-size: large"
+            ></textarea>
+          </div>
+        </div>
       </div>
 
       <div class="row justify-content-center mt-4">
         <div
           class="col-7 pt-5 pb-5 bg-warning text-white"
-          style="box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2); border-radius: 20px"
+          style="
+            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+            border-radius: 20px;
+          "
         >
           <div class="row">
             <div class="col-8" id="total">
@@ -101,10 +144,14 @@
         <div class="col-12 pt-5 pb-5">
           <div class="row justify-content-center">
             <div class="col-4 text-right">
-              <a class="btn btn-danger" href="/client"><h3>Continute to Shopping!!</h3></a>
+              <a class="btn btn-danger" href="/client"
+                ><h3>Continute to Shopping!!</h3></a
+              >
             </div>
             <div class="col-4 text-left">
-              <button class="btn btn-primary" type="submit"><h3>Make a payment</h3></button>
+              <button class="btn btn-primary" type="submit">
+                <h3>Make a payment</h3>
+              </button>
             </div>
           </div>
         </div>
