--- a/views/client-foods.ejs
+++ b/views/client-foods.ejs
@@ -17,7 +17,7 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-                OUR <strong><span class="text-warning">FOODS</span></strong>
+                Đồ <strong><span class="text-warning">ăn</span></strong>
               </h1>
             </div>
           </div>
@@ -71,7 +71,7 @@
                       class="d-flex flex-column"
                     >
                       <button class="btn btn-outline-danger btn-lg mt-2" type="submit">
-                        <h4>Add to cart</h4>
+                        <h4>Thêm vào giỏ hàng</h4>
                       </button>
                     </form>
                   </div>
@@ -83,16 +83,16 @@
       </div>
 
       <% }) %> <% } else { %>
-      <h4>No item found</h4>
+      <h4>Không tìm thấy</h4>
       <% } %>
       <div class="col-2">
         <a href="/client" type="submit" class="btn btn-primary text d-flex justify-content-center"
-          ><h3>Go to homepage</h3></a
+          ><h3>Về trang chủ</h3></a
         >
       </div>
       <div class="col-2">
         <a href="/cart" type="submit" class="btn btn-primary text d-flex justify-content-center"
-          ><h3>Go to cart</h3></a
+          ><h3>Tới giỏ hàng</h3></a
         >
       </div>
     </div>
